@@ -31,6 +31,10 @@ and
 look for this variable to determine what startup banner code to use).
 .SH ENVIRONMENT
 .TP
+.B AUTH_ATTEMPTS
+The maximum number of authentication attempts to allow before dropping
+the connection.
+.TP
 .B AUTH_TIMEOUT
 The maximum number of seconds to wait for successful authentication.
 .TP
