@@ -3,6 +3,9 @@ Changes in version 1.22
 
 - Switched to the CVM v2 client library.
 
+- Added a $AUTH_ATTEMPTS control to twoftpd-auth to limit the number of
+  authentication attempts per session.
+
 - Fixed listing files with special characters in their names.
 
 Development of this version has been sponsored by FutureQuest, Inc.
